--- a/blogging/templates/blogging/list.html
+++ b/blogging/templates/blogging/list.html
@@ -3,9 +3,9 @@
 {% block content %}
 <h1>Recent Posts</h1>
 {% comment %} here is where the query happens {% endcomment %}
-{% for post in posts %}
+{% for post in post_list %}
 <div class="post">
-    <h2>{{ post }}</h2>
+    <h2>{{ object.title }}</h2>
     <p class="byline">
         Posted by {{ post.author.username }} &mdash; {{ post.published_date }}
     </p>
@@ -14,7 +14,7 @@
     </div>
     <ul class="categories">
         {% for category in post.categories.all %}
-        <li>{{ category }}</li>
+        <li>{{ post.category }}</li>
         {% endfor %}
     </ul>
 </div>
