--- a/blogging/templates/blogging/detail.html
+++ b/blogging/templates/blogging/detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="post">
-    <h2>{{ post }}</h2>
+    <h2>{{ post.title }}</h2>
     <p class="byline">
         Posted by {{ post.author.username }} &mdash; {{ post.published_date }}
     </p>
@@ -10,7 +10,7 @@
     </div>
     <ul class="categories">
         {% for category in post.categories.all %}
-        <li>{{ category }}</li>
+        <li>{{ post.category }}</li>
         {% endfor %}
     </ul>
 </div>
