--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
             <li><a href="{% url 'logout' %}">logout</a></li>
             {% else %}
             <li><a href="{% url 'account_login' %}">login</a></li>
+            <li><a href="{% provider_login_url 'github' %}">Login with GitHub</a></li>
             {% endif %}
         </ul>
     </div>
