--- a/blogging/templates/blogging/list.html
+++ b/blogging/templates/blogging/list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Recent Posts</h1>
-{% comment %} here is where the query happens {% endcomment %}
+{% comment %} here is where the query happens! {% endcomment %}
 {% for post in post_list %}
 <div class="post">
     <h2>{{ object.title }}</h2>
